# SDL_gpu_examples_glTF

./: CMakeLists.txt  README.md  build.gradle
Content/: CMakeLists.txt
Content/Images/: CMakeLists.txt
Content/Images/astc/: CMakeLists.txt
Content/Images/bcn/: CMakeLists.txt
Content/Models/: CMakeLists.txt
Content/Models/Box/: CMakeLists.txt
Content/Models/Box/glTF-Embedded/: CMakeLists.txt
Content/Models/DamagedHelmet/: CMakeLists.txt
Content/Models/DamagedHelmet/glTF-Embedded/: CMakeLists.txt
Content/Models/Dumpy/glTF/: dumpy.gltf
Content/Models/Dumpy_bread/glTF/: CMakeLists.txt  dump_bread_float.gltf
Content/Models/Dumpy_normals/glTF/: CMakeLists.txt  dumpy_norm.gltf
Content/Models/green_cube/: CMakeLists.txt
Content/Models/green_cube/glTF/: CMakeLists.txt  green_cube.gltf
Content/Shaders/: CMakeLists.txt
Content/Shaders/Compiled/: CMakeLists.txt
Content/Shaders/Compiled/DXIL/: CMakeLists.txt  PositionTexturedTransform.vert.dxil  TexturedDepth.frag.dxil
Content/Shaders/Compiled/MSL/: CMakeLists.txt  PositionTexturedTransform.vert.msl  TexturedDepth.frag.msl
Content/Shaders/Compiled/SPIRV/: CMakeLists.txt  PositionTexturedTransform.vert.spv  TexturedDepth.frag.spv
Content/Shaders/Source/: PositionTexturedTransform.vert.hlsl  TexturedDepth.frag.hlsl
Examples/: Common.c  Common.h  GlTF.cpp  main.c
Src/: VulkanDevice.hpp  glTFModel.cpp  glTFModel.h
